--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Work Experience</heading>
+            <heading>Internships</heading>
             <p>
               <li style="margin: 5px;"> June. 2021: Research Intern at Hikvision Research 
               </li>
