--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
  
 <p><center>
 	  <div id="clustrmaps-widget" style="width:5%">
-	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=yp3s8rdiQW_pbzmBOzWDx2Fv6afIlEpV-k1EZiYIkEY"></script>
+<!-- 	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=yp3s8rdiQW_pbzmBOzWDx2Fv6afIlEpV-k1EZiYIkEY"></script> -->
 	  </div>        
 	  <br>
 	    &copy; Song Wang | Last updated: April 23, 2023
