--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Internships</heading>
             <p>
-              <li style="margin: 5px;"> June. 2021: Research Intern at Hikvision Research 
+              <li style="margin: 5px;"> June. 2021: Research Intern at Hikvision Research Institute
               </li>
               <li style="margin: 5px;"> October. 2020: Engineering Intern at VIVO AI Lab
               </li>
