--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <a href="https://arxiv.org/abs/2202.13377">[arXiv]</a> 
               <a href="https://github.com/songw-zju/Meta-RangeSeg">[Code]</a> 
               <br>
-              <p> We propose a novel approach to LiDAR semantic segmentation, which introduced a range residual image representation to capture the spatial-temporal information. </p>
+              <p> We propose a novel approach to LiDAR semantic segmentation, which introduces a range residual image representation to capture the spatial-temporal information. </p>
             </td>
           </tr>
         </tbody></table>
