--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <br>
               <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023
               <br>
-              <a href="">[arXiv]</a>
+              <a href="https://arxiv.org/abs/2304.11379">[arXiv]</a>
               <a href="https://github.com/songw-zju/LiDAR2Map">[Code]</a>
               <br>
               <p> In this work, an efficient semantic map construction framework named LiDAR2Map, is presented with an effective BEV feature pyramid decoder and an online Camera-to-LiDAR distillation scheme.</p>
