--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           </tr>
         </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
         </tr>
-      </tbody></table>
+      </tbody></table> -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
@@ -72,6 +72,32 @@
 
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src="images/point2mask.jpg" alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Point2Mask: Point-supervised Panoptic Segmentation via Optimal Transport</papertitle>
+              <br>
+              <a href="https://cslwt.github.io/"> Wentong Li</a>, 
+              <a href=""> Yuqian Yuan</a>,
+              <strong>Song Wang</strong>, 
+              <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu</a>,
+              <a href=""> Jianshu Li</a>,
+              <a href=""> Jian Liu</a>, 
+              <a href="https://www4.comp.polyu.edu.hk/~cslzhang/"> Lei Zhang</a>
+              <br>
+              <em>IEEE/CVF International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2023
+              <br>
+              <a href="https://arxiv.org/abs/2308.01779">[arXiv]</a>
+              <a href="https://github.com/LiWentomng/Point2Mask">[Code]</a>
+              <br>
+              <p> In this paper, we present an effective method, namely Point2Mask, to achieve highquality panoptic prediction using only a single random point annotation per target for training.</p>
+            </td>
+          </tr>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
               <img style="width:100%;max-width:100%" src="images/LiDAR2Map.png" alt="dise">
             </td>
             <td width="75%" valign="center">
@@ -81,7 +107,7 @@
               <a href="https://cslwt.github.io/"> Wentong Li</a>, 
               <a href="https://scholar.google.com/citations?user=JloV4T0AAAAJ&hl=en"> Wenyu Liu</a>, 
               <a href=""> Xiaolu Liu</a>, 
-              <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu </a>
+              <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu</a>
               <br>
               <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023
               <br>
@@ -104,10 +130,10 @@
               <papertitle>Meta-RangeSeg: LiDAR Sequence Semantic Segmentation Using Multiple Feature Aggregation</papertitle>
               <br>
               <strong>Song Wang</strong>,   
-              <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu </a>, 
-              <a href="https://scholar.google.com/citations?user=5UVo7HYAAAAJ&hl=en"> Ruixiang Zhang </a>
+              <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu</a>, 
+              <a href="https://scholar.google.com/citations?user=5UVo7HYAAAAJ&hl=en"> Ruixiang Zhang</a>
               <br>
-              <em>IEEE Robotics and Automation Letters (<strong>RA-L with IROS</strong>, IF: 4.321)</em>, 2022
+              <em>IEEE Robotics and Automation Letters (<strong>RA-L with IROS</strong>, IF: 5.2)</em>, 2022
               <br>
               <a href="https://arxiv.org/abs/2202.13377">[arXiv]</a> 
               <a href="https://github.com/songw-zju/Meta-RangeSeg">[Code]</a> 
@@ -119,14 +145,17 @@
 
         
 
-
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Honors and Awards</heading>
               <p>
+                <li style="margin: 5px;"> Outstanding Academic Scholarship, Zhejiang University</li>
                 <li style="margin: 5px;"> Outstanding Undergraduate Award, Zhejiang University</li>
-                <li style="margin: 5px;"> Zhejiang Province Scholarship, Zhejiang University </li>
+                <li style="margin: 5px;"> Zhejiang Province Scholarship, Zhejiang Province </li>
+                <li style="margin: 5px;"> Zhongtian Technology First-Class Scholarship, Zhejiang University </li>
+                <li style="margin: 5px;"> Zhejiang University Scholarship - Second Prize, Zhejiang University </li>
+                <li style="margin: 5px;"> First Prize in Advanced Mathematics Competition, Zhejiang Province </li>
               </p>
             </td>
           </tr>
@@ -166,7 +195,7 @@
 <!-- 	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=yp3s8rdiQW_pbzmBOzWDx2Fv6afIlEpV-k1EZiYIkEY"></script> -->
 	  </div>        
 	  <br>
-	    &copy; Song Wang | Last updated: April 23, 2023
+	    &copy; Song Wang | Last updated: August 23, 2023
 </center></p>
 </body>
 
