--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
               </p>
               <p>
               I am interested in computer vision and machine learning. My current research focuses on:
-                <li style="margin: 5px;" >
-                  <b>LiDAR perception</b> including semantic segmentation and map construction.
-                </li>
+              <li style="margin: 5px;" >
+                <b>Label-efficient learning</b> for 2D and 3D dense prediction.
+              </li>
                 <li style="margin: 5px;" >
                   <b>Vision-centric occupancy network</b> as known as semantic scene completion.
+                </li>
+                <li style="margin: 5px;" >
+                  <b>LiDAR perception</b> including semantic segmentation and map construction.
                 </li>
               </p>
               <p style="text-align:center">
@@ -72,13 +75,41 @@
 
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src="images/APro.png" alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Label-efficient Segmentation via Affinity Propagation</papertitle>
+              <br>
+              <a href="https://cslwt.github.io/"> Wentong Li*</a>, 
+              <a href="https://yuqianyuan.github.io/"> Yuqian Yuan*</a>,
+              <strong>Song Wang</strong>, 
+              <a href="https://scholar.google.com/citations?user=JloV4T0AAAAJ&hl=en"> Wenyu Liu</a>, 
+              <a href=""> Dongqi Tang</a>,
+              <a href=""> Jian Liu</a>, 
+              <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu</a>,
+              <a href="https://www4.comp.polyu.edu.hk/~cslzhang/"> Lei Zhang</a>
+              <br>
+              <em>Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2023
+              <br>
+              <a href="https://arxiv.org/abs/2310.10533">[arXiv]</a>
+              <a href="https://github.com/CircleRadon/APro">[Code]</a>
+              <a href="https://liwentomng.github.io/apro">[Project Page]</a>
+              <br>
+              <p> We propose a method named APro, designed to generate precise soft pseudo labels online for unlabeled regions within segmentation networks.</p>
+            </td>
+          </tr>
+        
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
               <img style="width:100%;max-width:100%" src="images/point2mask.jpg" alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Point2Mask: Point-supervised Panoptic Segmentation via Optimal Transport</papertitle>
               <br>
               <a href="https://cslwt.github.io/"> Wentong Li</a>, 
-              <a href=""> Yuqian Yuan</a>,
+              <a href="https://yuqianyuan.github.io/"> Yuqian Yuan</a>,
               <strong>Song Wang</strong>, 
               <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu</a>,
               <a href=""> Jianshu Li</a>,
@@ -161,6 +192,7 @@
           </tr>
         </tbody></table>
 
+        
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
@@ -195,7 +227,7 @@
 <!-- 	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=yp3s8rdiQW_pbzmBOzWDx2Fv6afIlEpV-k1EZiYIkEY"></script> -->
 	  </div>        
 	  <br>
-	    &copy; Song Wang | Last updated: August 23, 2023
+	    &copy; Song Wang | Last updated: October 18, 2023
 </center></p>
 </body>
 
