--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
               <p>
                 <li style="margin: 5px;"> Outstanding Academic Scholarship, Zhejiang University</li>
                 <li style="margin: 5px;"> Outstanding Undergraduate Award, Zhejiang University</li>
-                <li style="margin: 5px;"> Zhejiang Province Scholarship, Zhejiang Province </li>
+                <li style="margin: 5px;"> Zhejiang Provincial Government Scholarship, Zhejiang Province </li>
                 <li style="margin: 5px;"> Zhongtian Technology First-Class Scholarship, Zhejiang University </li>
                 <li style="margin: 5px;"> Zhejiang University Scholarship - Second Prize, Zhejiang University </li>
                 <li style="margin: 5px;"> First Prize in Advanced Mathematics Competition, Zhejiang Province </li>
@@ -198,8 +198,8 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Internships</heading>
             <p>
-              <li style="margin: 5px;"> June. 2021: Research Intern at Hikvision Research Institute
-              </li>
+<!--               <li style="margin: 5px;"> June. 2021: Research Intern at Hikvision Research Institute
+              </li> -->
               <li style="margin: 5px;"> October. 2020: Engineering Intern at VIVO AI Lab
               </li>
             </p>
