--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <name>Song Wang</name>
               </p>
               <p> 
-                I am a graduate student in the College of Software Technology at Zhejiang University, advised by Prof. <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu </a>. 
+                I am a third-year Ph.D. student in the College of Computer Science and Technology at Zhejiang University, advised by Prof. <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu </a>. 
                 Prior to that, I obtained my B.Eng. at Zhejiang University, supervised by Prof. <a href="https://person.zju.edu.cn/0014142"> Zhiwei Xu </a> and Prof. <a href="https://person.zju.edu.cn/0012062"> Hangfang Zhao </a>.
               </p>
               <p>
@@ -37,7 +37,7 @@
                 <b>Label-efficient learning</b> for 2D and 3D dense prediction.
               </li>
                 <li style="margin: 5px;" >
-                  <b>Vision-centric occupancy network</b> as known as semantic scene completion.
+                  <b>Vision-centric occupancy network</b> also known as semantic scene completion.
                 </li>
                 <li style="margin: 5px;" >
                   <b>LiDAR perception</b> including semantic segmentation and map construction.
@@ -198,7 +198,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Internships</heading>
             <p>
-<!--               <li style="margin: 5px;"> June. 2021: Research Intern at Hikvision Research Institute
+              <li style="margin: 5px;"> June. 2021: Research Intern at Hikvision Research Institute
               </li> -->
               <li style="margin: 5px;"> October. 2020: Engineering Intern at VIVO AI Lab
               </li>
