--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </tr>
         </tbody></table>
 
-        
+<!--         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
@@ -205,7 +205,7 @@
             </p>
           </td>
         </tr>
-      </tbody></table>
+      </tbody></table> -->
        
   
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
