--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <a href="https://arxiv.org/abs/2403.08504">[arXiv]</a>
               <a href="">[Code]</a>
               <br>
-              <p> In addressing the challenges of inferior performance and data closure in visionbased SSC, we introduce OccFiner, the first offboard SSC setup to solve the unreliability of the onboard model.</p>
+              <p> In addressing the challenges of inferior performance and data closure in vision-based SSC, we introduce OccFiner, the first offboard SSC setup to solve the unreliability of the onboard model.</p>
             </td>
           </tr>
         
