--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                   <b>LiDAR perception</b> including semantic segmentation and map construction.
                 </li> -->
               </p>
+              <p>
+                <b>Various forms of academic collaboration and discussion are welcome. Feel free to reach out!</b>
+              </p>
               <p style="text-align:center">
                 <a href="mailto:songw@zju.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=Jj0jbL8AAAAJ"> Google Scholar</a> &nbsp/&nbsp
@@ -99,11 +102,11 @@
               <a href="https://arxiv.org/abs/2403.08504">[arXiv]</a>
               <a href="">[Code]</a>
               <br>
-              <p> In addressing the challenges of inferior performance and data closure in vision-based SSC, we introduce OccFiner, the first offboard SSC setup to solve the unreliability of the onboard model.</p>
+              <p> In addressing the challenges of inferior performance and data closure in visionbased SSC, we introduce OccFiner, the first offboard SSC setup to solve the unreliability of the onboard model.</p>
             </td>
           </tr>
         
-        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
@@ -127,7 +130,7 @@
               <br>
               <p> In this work, we have presented a scribble-based label-efficient benchmark ScribbleSC for semantic scene completion in autonomous driving. To enhance the performance in this setting, an effective scribble-supervised approach Scribble2Scene has been developed.</p>
             </td>
-          </tr> -->
+          </tr>
 
         
 
@@ -307,6 +310,19 @@
           </tr>
         </tbody></table>
 
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Academic Services</heading>
+            <p>
+              <li style="margin: 5px;"> Conference Reviewer: ECCV 2024, SynData4CV@CVPR 2024, ACM MM 2023-2024, ICRA 2024</li>
+              <li style="margin: 5px;"> Journal Reviewer: IEEE Robotics and Automation Letters, IEEE Transactions on Intelligent Vehicles</li>
+            </p>
+          </td>
+        </tr>
+      </tbody></table>
+
 <!--         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -342,7 +358,7 @@
 <!-- 	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=yp3s8rdiQW_pbzmBOzWDx2Fv6afIlEpV-k1EZiYIkEY"></script> -->
 	  </div>        
 	  <br>
-	    &copy; Song Wang | Last updated: April 18, 2024
+	    &copy; Song Wang | Last updated: May 24, 2024
 </center></p>
 </body>
 
