--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Academic Services</heading>
             <p>
-              <li style="margin: 5px;"> Conference Reviewer: ECCV 2024, SynData4CV@CVPR 2024, ACM MM 2023-2024, ICRA 2024</li>
+              <li style="margin: 5px;"> Conference Reviewer: NeurIPS 2024, ECCV 2024, SynData4CV@CVPR 2024, ACM MM 2023-2024, ICRA 2024</li>
               <li style="margin: 5px;"> Journal Reviewer: IEEE Robotics and Automation Letters, IEEE Transactions on Intelligent Vehicles</li>
             </p>
           </td>
