--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <br>
               <em>International Joint Conference on Artificial Intelligence (<strong>IJCAI</strong>)</em>, 2024
               <br>
-              <a href="">[arXiv]</a>
+              <a href="http://arxiv.org/abs/2405.15170">[arXiv]</a>
               <a href="https://github.com/songw-zju/Scribble2Scene">[Code]</a>
               <br>
               <p> In this work, we have presented a scribble-based label-efficient benchmark ScribbleSC for semantic scene completion in autonomous driving. To enhance the performance in this setting, an effective scribble-supervised approach Scribble2Scene has been developed.</p>
