--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
               <br>
               <a href="https://arxiv.org/abs/2505.18675">[arXiv]</a>
               <a href="https://github.com/fscdc/ReasonMap">[Code]</a>
-              <a href="https://fscdc.github.io/Reason-Map/">[Project Page]</a>
+              <a href="https://fscdc.github.io/Reason-Map">[Project Page]</a>
+              <a href="https://mp.weixin.qq.com/s/sPJLQtHgl5DZghWLWa_H3Q">[中文解读]</a>
               <br>
               <!-- <p>  In this paper, we adhere to the principle of not all voxels are equal and propose hardness-aware semantic scene completion (HASSC). </p> -->
             </td>
@@ -279,7 +280,7 @@
               <a href=""> Jian Liu</a>,
               <a href=""> Dongqi Tang</a>,
               <strong>Song Wang</strong>, 
-              <a href="https://sites.google.com/site/firmamentqj"> Jin Qin</a>,
+              <a href="https://sites.google.com/site/firmamentqj"> Jie Qin</a>,
               <a href="https://person.zju.edu.cn/jkzhu"> Jianke Zhu</a>,
               <a href="https://www4.comp.polyu.edu.hk/~cslzhang/"> Lei Zhang</a>
               <br>
@@ -299,7 +300,7 @@
               <img style="width:100%;max-width:100%" src="images/OccFiner.png" alt="dise">
             </td>
             <td width="75%" valign="center">
-              <papertitle>OccFiner: Offboard Occupancy Refinement with Hybrid Propagation</papertitle>
+              <papertitle>Offboard Occupancy Refinement with Hybrid Propagation for Autonomous Driving</papertitle>
               <br>
               <a href="https://scholar.google.com/citations?user=0EI9msQAAAAJ"> Hao Shi*</a>, 
               <strong>Song Wang*</strong>, 
