--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               <p>
               I have broad research interests in computer vision and machine learning. My current research focuses on:
               <li style="margin: 5px;" >
-                <b>Post-training for multi-modal large language models (MLLM)</b> along with efficient reasoning.
+                <b>Post-training for multi-modal large language models (MLLM)</b> along with efficient and agentic reasoning.
               </li>
                 <li style="margin: 5px;" >
-                  <b>Pre-training and parameter-efficient fine-tuning (PEFT)</b>  for multi-modal foundation models.
+                  <b>Pre-training and parameter-efficient fine-tuning (PEFT)</b>  for multi-modal perception models.
                 </li>
                 <li style="margin: 5px;" >
                   <b>Vision-centric autonomous driving</b> including occupancy network and semantic map construction.
